--- a/css/default.css
+++ b/css/default.css
@@ -32,6 +32,19 @@ body {
 	line-height: 1;
 	background-color: mediumaquamarine;
 }
+
+.breadcrumbs li {
+	display: inline; /*liを横並び*/
+	list-style-type: none;/*点を消す*/
+}
+
+.breadcrumbs li:before {
+	content: " > "; /*liの前に記号追加*/
+}
+
+.breadcrumbs li:first-child:before {
+	content:"";/*最初だけcontentを消す*/
+}
 ol, ul {
 	list-style: none;
 }
