--- a/css/default.css
+++ b/css/default.css
@@ -32,7 +32,11 @@ body {
 	line-height: 1;
 	background-color: mediumaquamarine;
 }
-
+#gnav a.selected {
+  background: white;
+  color: darkgrenn;
+  font-weight: bold;/*太字にしてみる*/
+}
 #gnav a {
   display: block; /*a要素のブロック化*/
   padding:10px 0;/*上下に空間を確保する*/
