--- a/css/default.css
+++ b/css/default.css
@@ -33,6 +33,12 @@ body {
 	background-color: mediumaquamarine;
 }
 
+#gnav a.selected {
+  background: white;
+  color: darkgreen;
+  font-weight: bold;/*太字にしてみる*/
+}
+
 #gnav a {
   display: block; /*a要素のブロック化*/
   padding:10px 0;/*上下に空間を確保する*/
@@ -58,11 +64,6 @@ body {
 
 #gnav li:first-child {
   border-left: white 1px solid;/*左にも線を引く*/
-}
-#gnav a.selected {
-  background: white;
-  color: darkgrenn;
-  font-weight: bold;/*太字にしてみる*/
 }
 
 .breadcrumbs li {
