--- a/css/default.css
+++ b/css/default.css
@@ -37,7 +37,7 @@ body {
   overflow: hidden;
 }
 
-#logo li: {
+#logo li {
   float: left;/*固定幅にするためにfloatで指定*/
   list-style-type: none;/*点を消す*/
 }
