--- a/css/default.css
+++ b/css/default.css
@@ -40,6 +40,10 @@ body {
 #logo li {
   float: left;/*固定幅にするためにfloatで指定*/
   list-style-type: none;/*点を消す*/
+  display: table-cell;
+  vertical-align: middle;
+  padding: 0 10px;/*左右を開ける*/
+  list-style-type: none;/*点を消す*/
 }
 
 #logo img {
